<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/add_guest_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.AddGuestActivity">

    <ImageButton
        android:id="@+id/imageButton_ArrowBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/outline_arrow_back_ios_24"
        android:contentDescription="@drawable/outline_arrow_back_ios_24"
        android:scaleType="center"

        app:layout_constraintBottom_toBottomOf="@+id/textView_PageName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_PageName" />

    <TextView
        android:id="@+id/textView_PageName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/text_add_guest_page"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_AddGuest"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/text_add_guest"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="132dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view_LeftAddGuestSeparator"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_AddGuest"
        app:layout_constraintEnd_toStartOf="@+id/textView_AddGuest"
        app:layout_constraintTop_toTopOf="@+id/textView_AddGuest" />

    <View
        android:id="@+id/view_RightAddGuestSeparator"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_AddGuest"
        app:layout_constraintStart_toEndOf="@+id/textView_AddGuest"
        app:layout_constraintTop_toTopOf="@+id/textView_AddGuest" />

    <EditText
        android:id="@+id/editText_CarN"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="6"
        android:autofillHints="@string/edit_text_hint_car_number"
        android:hint="@string/edit_text_hint_car_number"
        android:inputType="text"
        android:maxLength="6"
        android:layout_margin="25dp"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_AddGuest" />


    <EditText
        android:id="@+id/editText_Datetime"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="6"
        android:inputType="text"
        android:layout_margin="25dp"
        android:autofillHints="@string/edit_text_hint_datetime"
        android:hint="@string/edit_text_hint_datetime"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_CarN" />

    <Button
        android:id="@+id/button_Add"
        android:layout_width="150dp"
        android:layout_height="60dp"

        android:text="@string/button_text_add_guest"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Datetime" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ScrollView
        android:id="@+id/scrollView_RecentEvents"
        android:layout_width="387dp"
        android:layout_height="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <LinearLayout
            android:id="@+id/linearLayout_RequestEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="А123БВ ожидание"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Ж354ВА подтверждено"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="А123БВ ожидание"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Ж354ВА подтверждено"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="А123БВ ожидание"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Ж354ВА подтверждено"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>