<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.MainPageActivity">

    <TextView
        android:id="@+id/textView_PageName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_main_page"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_PageName" />

    <ImageButton
        android:id="@+id/imageButton_Profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/outline_account_circle_24"
        android:contentDescription="@drawable/outline_account_circle_24"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView_PageName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_PageName" />

    <TextView
        android:id="@+id/textView_Greeting"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/text_default_greeting"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/textView_RecentEvents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
        android:id="@+id/textView_RecentEvents"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/text_recent_events"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/scrollView_RecentEvents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_LeftGreetingSeparator"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_RecentEvents"
        app:layout_constraintEnd_toStartOf="@+id/textView_RecentEvents"
        app:layout_constraintTop_toTopOf="@+id/textView_RecentEvents" />

    <View
        android:id="@+id/view_RightGreetingSeparator"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_RecentEvents"
        app:layout_constraintStart_toEndOf="@+id/textView_RecentEvents"
        app:layout_constraintTop_toTopOf="@+id/textView_RecentEvents" />


    <ScrollView
        android:id="@+id/scrollView_RecentEvents"
        android:layout_width="wrap_content"
        android:layout_height="120pt"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_RecentEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Сегодня 14:50 выезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Сегодня 19:57 въезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 15:00 гость В123ДЛ подтверждён"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 14:49 гость В123ДЛ запрос на подтверждение"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 12:07 въезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 09:34 выезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Сегодня 14:50 выезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Сегодня 19:57 въезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 15:00 гость В123ДЛ подтверждён"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 14:49 гость В123ДЛ запрос на подтверждение"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 12:07 въезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Вчера 09:34 выезд А123БВ"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_AddGuest"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/button_text_add_guest"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_MyCars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_RecentEvents"/>

    <Button
        android:id="@+id/button_MyCars"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/button_text_my_cars"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_MyCars"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_AddGuest"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_RecentEvents" />

</androidx.constraintlayout.widget.ConstraintLayout>

